--- a/mservices/index.html
+++ b/mservices/index.html
@@ -82,6 +82,14 @@
             </div>
         </section>
 
+        <!-- Overlay background for hero section background image -->
+        <div id="backgroundchange">
+            <div class="backgroundimg" id="back1"></div>
+            <div class="backgroundimg" id="back2"></div>
+            <div class="backgroundimg" id="back4"></div>
+            <div class="backgroundimg" id="back3"></div>
+        </div>
+
         <!-- Electrical Installation -->
         <section id="electric-install">
             <div class="container">
@@ -111,8 +119,8 @@
                             We offer our expertise in renovation & partitioning works.
                         </p>
                     </div>
-                    <div class="civil-img" data-aos="fade-left" data-aos-delay="100">
-                        <img src="assets/img/24.jpg" alt="" class="img-fluid">
+                    <div class="civil-img" data-aos="fade-up" data-aos-delay="100">
+                        <img src="assets/img/88.jpg" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
