--- a/mservices/index.html
+++ b/mservices/index.html
@@ -35,7 +35,7 @@
         <nav class="navbar">
             <div class="nav-brand">
                 <a href="#home" class="nav-brand-text"><span>M Services | Electrical contractor</span> <i
-                        class="far fa-lightbulb text-danger"></i></a>
+                        class="fas fa-bolt text-danger"></i></a>
             </div>
             <label for="check" id="check-btn">
                 <i class="fas fa-th"></i>
@@ -120,7 +120,7 @@
                         </p>
                     </div>
                     <div class="civil-img" data-aos="fade-up" data-aos-delay="100">
-                        <img src="assets/img/88.jpg" alt="" class="img-fluid">
+                        <img src="assets/img/87.jpg" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -275,7 +275,7 @@
             <div class="row even-columns">
                 <div class="col">
                     <h1 class="display-4">
-                        M Services | Electrical contractor <i class="far fa-lightbulb text-danger"></i>
+                        M Services | Electrical contractor <i class="fas fa-bolt text-danger"></i>
                     </h1>
                     <a href="tel:+255 713 500 365" class="btn btn-call">Call Us Now</a>
                 </div>
