--- a/mservices/pages/contact.html
+++ b/mservices/pages/contact.html
@@ -35,7 +35,7 @@
         <nav class="navbar">
             <div class="nav-brand">
                 <a href="#home" class="nav-brand-text"><span>M Services | Electrical contractor</span> <i
-                        class="far fa-lightbulb text-danger"></i></a>
+                        class="fas fa-bolt text-danger"></i></a>
             </div>
             <label for="check" id="check-btn">
                 <i class="fas fa-th"></i>
@@ -87,51 +87,49 @@
                 <h1 class="display-4">Get In Touch</h1>
                 <p class="contact-para">Please fill in the form below to contact us</p>
                 <div class="row flex even-columns">
-                    <div class="form-wrapper">
-                        <form action="#" method="post">
-                            <div class="multi-cross-fields">
-                                <div class="field names">
-                                    <div class="input-group">
-                                        <input type="text" name="fullname" id="fullname" placeholder="Full Name">
-                                        <i class="icon fas fa-user-alt"></i>
-                                    </div>
-                                </div>
-                                <div class="field phone">
-                                    <div class="input-group">
-                                        <input type="text" name="phone" id="phone" placeholder="Phone">
-                                        <i class="icon fas fa-phone-alt"></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="multi-cross-fields">
-                                <div class="field email">
-                                    <div class="input-group">
-                                        <input type="email" name="email" id="email" placeholder="Email">
-                                        <i class="icon fas fa-envelope"></i>
-                                    </div>
-                                </div>
-                                <div class="field subject">
-                                    <div class="input-group">
-                                        <input type="text" name="subject" id="subject" placeholder="Subject">
-                                        <i class="icon fas fa-comment"></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="field message">
+                    <form method="post">
+                        <div class="multi-cross-fields">
+                            <div class="field names">
                                 <div class="input-group">
-                                    <textarea name="message" id="message" placeholder="Message" cols="30" rows="10"
-                                    ></textarea>
-                                        <i class="icon fas fa-comments"></i>
+                                    <input type="text" name="fullname" id="fullname" placeholder="Full Name">
+                                    <i class="icon fas fa-user-alt"></i>
                                 </div>
                             </div>
-                            <div class="submit-button-area">
-                                <input type="submit" value="Send Message" class="btn btn-send">
-                                <span>Sending your message...</span>
+                            <div class="field phone">
+                                <div class="input-group">
+                                    <input type="text" name="phone" id="phone" placeholder="Phone">
+                                    <i class="icon fas fa-phone-alt"></i>
+                                </div>
                             </div>
-                        </form>
-                    </div>
+                        </div>
+                        <div class="multi-cross-fields">
+                            <div class="field email">
+                                <div class="input-group">
+                                    <input type="text" name="email" id="email" placeholder="Email">
+                                    <i class="icon fas fa-envelope"></i>
+                                </div>
+                            </div>
+                            <div class="field subject">
+                                <div class="input-group">
+                                    <input type="text" name="subject" id="subject" placeholder="Subject">
+                                    <i class="icon fas fa-comment"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="field message">
+                            <div class="input-group">
+                                <textarea name="message" id="message" placeholder="Message" cols="30"
+                                    rows="10"></textarea>
+                                <i class="icon fas fa-comments"></i>
+                            </div>
+                        </div>
+                        <div class="submit-button-area">
+                            <input type="submit" value="Send Message" class="btn btn-send">
+                            <span>Sending your message...</span>
+                        </div>
+                    </form>
                     <div class="form-img">
-                        <img src="../assets/img/33.jpg" alt="" class="img-fluid">
+                        <img src="../assets/img/90.jpg" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -193,7 +191,7 @@
             <div class="row even-columns">
                 <div class="col">
                     <h1 class="display-4">
-                        M Services | Electrical contractor <i class="far fa-lightbulb text-danger"></i>
+                        M Services | Electrical contractor <i class="fas fa-bolt text-danger"></i>
                     </h1>
                     <a href="tel:+255 713 500 365" class="btn btn-call">Call Us Now</a>
                 </div>
