--- a/mservices/pages/services.html
+++ b/mservices/pages/services.html
@@ -34,8 +34,10 @@
     <header>
         <nav class="navbar">
             <div class="nav-brand">
-                <a href="#home" class="nav-brand-text"><span>M Services | Electrical contractor</span> <i
-                        class="fas fa-bolt text-danger"></i></a>
+                <a href="#home" class="nav-brand-logo-text">
+                    <img src="../assets/img/site-logo/logo.jpg" alt="" class="brand-logo">
+                    <span class="brand-text">M Services | Electrical contractor</span>
+                </a>
             </div>
             <label for="check" id="check-btn">
                 <i class="fas fa-th"></i>
@@ -97,7 +99,8 @@
                                 <div class="card-body">
                                     <h4>Residential Electrician</h4>
                                     <p>
-                                        Supply, installation, test and commissioning of electrical systems for residential
+                                        Supply, installation, test and commissioning of electrical systems for
+                                        residential
                                         buildings.
                                     </p>
                                 </div>
@@ -125,7 +128,8 @@
                                 <div class="card-body">
                                     <h4>Commercial Electrician</h4>
                                     <p>
-                                        Supply, installation, test and commissioning of electrical systems for commercial
+                                        Supply, installation, test and commissioning of electrical systems for
+                                        commercial
                                         buildings.
                                     </p>
                                 </div>
