--- a/mservices/index.html
+++ b/mservices/index.html
@@ -34,8 +34,10 @@
     <header>
         <nav class="navbar">
             <div class="nav-brand">
-                <a href="#home" class="nav-brand-text"><span>M Services | Electrical contractor</span> <i
-                        class="fas fa-bolt text-danger"></i></a>
+                <a href="#home" class="nav-brand-logo-text">
+                    <img src="assets/img/site-logo/logo.jpg" alt="" class="brand-logo">
+                    <span  class="brand-text">M Services | Electrical contractor</span>
+                </a>
             </div>
             <label for="check" id="check-btn">
                 <i class="fas fa-th"></i>
@@ -112,7 +114,7 @@
         <!-- Civil Work -->
         <section id="civil-work" class="bg-dark">
             <div class="container">
-                <div class="row flex even-columns">
+                <div class="row flexó even-columns">
                     <div class="civil-text" data-aos="fade-right" data-aos-delay="100">
                         <h1 class="display-1">Civil Works</h1>
                         <p>
@@ -155,6 +157,8 @@
                         </p>
                         <a href="tel:+255 713 500 365" class="btn">Enquire Service Now</a>
                     </div>
+                    <i class="prev-icon fas fa-arrow-circle-left"></i>
+                    <i class="next-icon fas fa-arrow-circle-right"></i>
                 </div>
             </div>
         </section>
@@ -185,7 +189,7 @@
                 <div class="row flex even-columns pt-2">
                     <div class="card">
                         <i class="fas fa-quote-left"></i>
-                        <img src="assets/img/user/user1.jpg" alt="user">
+                        <img src="assets/img/user/user1.png" alt="user">
                         <p>
                             Show respect and value all individuals for their diverse backgrounds, expe
                             riences, styles, approaches and ideas.
@@ -206,7 +210,7 @@
                     </div>
                     <div class="card">
                         <i class="fas fa-quote-left"></i>
-                        <img src="assets/img/user/user1.jpg" alt="user">
+                        <img src="assets/img/user/user1.png" alt="user">
                         <p>
                             Show respect and value all individuals for their diverse backgrounds, expe
                             riences, styles, approaches and ideas.
@@ -227,7 +231,7 @@
                     </div>
                     <div class="card">
                         <i class="fas fa-quote-left"></i>
-                        <img src="assets/img/user/user1.jpg" alt="user">
+                        <img src="assets/img/user/user1.png" alt="user">
                         <p>
                             Show respect and value all individuals for their diverse backgrounds, expe
                             riences, styles, approaches and ideas.
