--- a/mservices/pages/about.html
+++ b/mservices/pages/about.html
@@ -34,8 +34,10 @@
     <header>
         <nav class="navbar">
             <div class="nav-brand">
-                <a href="#home" class="nav-brand-text"><span>M Services | Electrical contractor</span> <i
-                        class="fas fa-bolt text-danger"></i></a>
+                <a href="#home" class="nav-brand-logo-text">
+                    <img src="../assets/img/site-logo/logo.jpg" alt="" class="brand-logo">
+                    <span class="brand-text">M Services | Electrical contractor</span>
+                </a>
             </div>
             <label for="check" id="check-btn">
                 <i class="fas fa-th"></i>
@@ -347,7 +349,7 @@
                 <div class="team-info pt-2">
                     <div class="team-card">
                         <div class="team-card-img">
-                            <img src="../assets/img/user/user1.jpg" alt="user">
+                            <img src="../assets/img/user/user2.png" alt="user">
                         </div>
                         <h3>Mushumbusi Bumarwa</h3>
                         <p>
@@ -371,7 +373,7 @@
                     </div>
                     <div class="team-card">
                         <div class="team-card-img">
-                            <img src="../assets/img/user/user1.jpg" alt="user">
+                            <img src="../assets/img/user/user2.png" alt="user">
                         </div>
                         <h3>Happen Urio</h3>
                         <p>
