--- a/mservices/pages/projects.html
+++ b/mservices/pages/projects.html
@@ -34,8 +34,10 @@
     <header>
         <nav class="navbar">
             <div class="nav-brand">
-                <a href="#home" class="nav-brand-text"><span>M Services | Electrical contractor</span> <i
-                        class="fas fa-bolt text-danger"></i></a>
+                <a href="#home" class="nav-brand-logo-text">
+                    <img src="../assets/img/site-logo/logo.jpg" alt="" class="brand-logo">
+                    <span class="brand-text">M Services | Electrical contractor</span>
+                </a>
             </div>
             <label for="check" id="check-btn">
                 <i class="fas fa-th"></i>
