--- a/mservices/index.html
+++ b/mservices/index.html
@@ -36,7 +36,7 @@
             <div class="nav-brand">
                 <a href="#home" class="nav-brand-logo-text">
                     <img src="assets/img/site-logo/logo.jpg" alt="" class="brand-logo">
-                    <span  class="brand-text">M Services | Electrical contractor</span>
+                    <span class="brand-text">M Services | Electrical contractor</span>
                 </a>
             </div>
             <label for="check" id="check-btn">
@@ -151,10 +151,8 @@
             <div class="container">
                 <div class="row flex even-columns">
                     <div class="commercial-text">
-                        <h1 class="display-4">Commercial Electrician</h1>
-                        <p>
-                            Installing, Testing and Commissioning of electrical systems for commercial buildings.
-                        </p>
+                        <h1 class="display-4"></h1>
+                        <p></p>
                         <a href="tel:+255 713 500 365" class="btn">Enquire Service Now</a>
                     </div>
                     <i class="prev-icon fas fa-arrow-circle-left"></i>
@@ -189,7 +187,7 @@
                 <div class="row flex even-columns pt-2">
                     <div class="card">
                         <i class="fas fa-quote-left"></i>
-                        <img src="assets/img/user/user1.png" alt="user">
+                        <img src="assets/img/user/user2.png" alt="user">
                         <p>
                             Show respect and value all individuals for their diverse backgrounds, expe
                             riences, styles, approaches and ideas.
@@ -210,7 +208,7 @@
                     </div>
                     <div class="card">
                         <i class="fas fa-quote-left"></i>
-                        <img src="assets/img/user/user1.png" alt="user">
+                        <img src="assets/img/user/user3.png" alt="user">
                         <p>
                             Show respect and value all individuals for their diverse backgrounds, expe
                             riences, styles, approaches and ideas.
@@ -231,7 +229,7 @@
                     </div>
                     <div class="card">
                         <i class="fas fa-quote-left"></i>
-                        <img src="assets/img/user/user1.png" alt="user">
+                        <img src="assets/img/user/user2.png" alt="user">
                         <p>
                             Show respect and value all individuals for their diverse backgrounds, expe
                             riences, styles, approaches and ideas.
