some changes on cbe web

--- a/cbe/index.html
+++ b/cbe/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Main CSS -->
     <link rel="stylesheet" href="assets/css/index.css">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="assets/img/cbe_logo.png" type="image/x-icon">
     <!-- Title -->
     <title>CBE | Registration</title>
     <!-- Font Awesome Offline CDN -->
