--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -13,8 +13,7 @@
     <!-- Font Awesome Online -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"
-        class="fonts-link">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet" class="fonts-link">
     <!-- Main CSS -->
     <link rel="stylesheet" href="assets/css/index.css">
     <!-- Header-Footer CSS -->
@@ -75,7 +74,7 @@
                 </div>
                 <div class="carts">
                     <div class="cart-details">
-                        <img src="assets/img/mc/mc1.jpg" alt="" class="cart-img">
+                        <img src="assets/img/mc/mc.jpg" alt="" class="cart-img">
                         <h5>MC Maeda</h5>
                         <p>
                             TZS 150,000,00.00
@@ -83,7 +82,7 @@
                         <i class="fas fa-trash-alt"></i>
                     </div>
                     <div class="cart-details">
-                        <img src="assets/img/mc/mc2.jpg" alt="" class="cart-img">
+                        <img src="assets/img/mc/mc.jpg" alt="" class="cart-img">
                         <h5>MC Njozi</h5>
                         <p>
                             TZS 340,000,00.00
@@ -91,7 +90,7 @@
                         <i class="fas fa-trash-alt"></i>
                     </div>
                     <div class="cart-details">
-                        <img src="assets/img/mc/mc2.jpg" alt="" class="cart-img">
+                        <img src="assets/img/mc/mc.jpg" alt="" class="cart-img">
                         <h5>MC Njozi</h5>
                         <p>
                             TZS 340,000,00.00
@@ -153,7 +152,7 @@
                         <a href="#mcs" class="btn btn-primary">Book Now</a>
                     </div>
                     <div class="hero-img">
-                        <img src="assets/img/hero/hero15.svg" alt="" class="img-fluid">
+                        <img src="assets/img/mc/gara_B.png" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -163,19 +162,18 @@
         <!-- MCs -->
         <section id="mcs" class="text-black bg-light">
             <div class="container">
-                <h2 class="display-4 text-center text-primary pt-3">Masters of Ceremony | Categories</h2>
+                <h2 class="display-4 text-center text-primary pt-3">Categories</h2>
                 <div class="row flex even-columns pt-3 pb-0">
                     <div class="card">
                         <div class="card-img">
                             <div class="inner">
-                                <img src="assets/img/mc/mc4.jpg" alt="" class="card-img-top img-fluid">
+                                <img src="assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
                             <h3>Official MCs</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <a href="pages/book_mc_official.html" class="btn-cart">Select</a>
@@ -185,14 +183,13 @@
                     <div class="card">
                         <div class="card-img">
                             <div class="inner">
-                                <img src="assets/img/mc/mc1.jpg" alt="" class="card-img-top img-fluid">
+                                <img src="assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
                             <h3>Casual MCs</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <a href="pages/book_mc_casual.html" class="btn-cart">Select</a>
@@ -202,14 +199,13 @@
                     <div class="card">
                         <div class="card-img">
                             <div class="inner">
-                                <img src="assets/img/mc/mc2.jpg" alt="" class="card-img-top img-fluid">
+                                <img src="assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
                             <h3>Mixed MCs</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <a href="pages/book_mc_mixed.html" class="btn-cart">Select</a>
@@ -232,8 +228,7 @@
                     <div class="col col-text">
                         <h3 class="better-text">We make it</h3>
                         <p>
-                            Plan your ceremony, function and event the better way with us as we keep track of the
-                            available masters of ceremony per a particular moments you make an appointment.
+                            Plan your ceremony, function and event the better way with us as we keep track of the available masters of ceremony per a particular moments you make an appointment.
                         </p>
                         <a href="#" class="btn btn-primary">Read More</a>
                     </div>
@@ -251,8 +246,7 @@
                     <div class="col col-text">
                         <h3 class="you-text">We do it</h3>
                         <p>
-                            Plan your ceremony, function and event the better way with us as we keep track of the
-                            available masters of ceremony per a particular moments you make an appointment.
+                            Plan your ceremony, function and event the better way with us as we keep track of the available masters of ceremony per a particular moments you make an appointment.
                         </p>
                         <a href="#" class="btn btn-primary">Read More</a>
                     </div>
@@ -276,8 +270,7 @@
                     <div class="col col-text">
                         <h3 class="schedule-text">Let's schedule it</h3>
                         <p>
-                            Plan your ceremony, function and event the better way with us as we keep track of the
-                            available masters of ceremony per a particular moments you make an appointment.
+                            Plan your ceremony, function and event the better way with us as we keep track of the available masters of ceremony per a particular moments you make an appointment.
                         </p>
                         <a href="#" class="btn btn-primary">Read More</a>
                     </div>
@@ -295,8 +288,7 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <img src="assets/img/hero/hero13.svg" alt="" class="img-fluid">
-                    Let's party!
+                    <img src="assets/img/hero/hero13.svg" alt="" class="img-fluid"> Let's party!
                 </div>
                 <div class="col">
                     <h3 class="text-secondary">
@@ -355,9 +347,7 @@
 
     <!-- ====== Scripts ====== -->
     <!-- JQuery CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <!-- jQuery Offline -->
     <script src="assets/vendors/jquery/jquery.min.js"></script>
     <!-- Main JS -->
