--- a/celebrate/pages/contact.html
+++ b/celebrate/pages/contact.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="carts">
                     <div class="cart-details">
-                        <img src="../assets/img/mc/mc1.jpg" alt="" class="cart-img">
+                        <img src="../assets/img/mc/mc.jpg" alt="" class="cart-img">
                         <h5>MC Maeda</h5>
                         <p>
                             TZS 150,000,00.00
@@ -80,7 +80,7 @@
                         <i class="fas fa-trash-alt"></i>
                     </div>
                     <div class="cart-details">
-                        <img src="../assets/img/mc/mc2.jpg" alt="" class="cart-img">
+                        <img src="../assets/img/mc/mc.jpg" alt="" class="cart-img">
                         <h5>MC Njozi</h5>
                         <p>
                             TZS 340,000,00.00
@@ -88,7 +88,7 @@
                         <i class="fas fa-trash-alt"></i>
                     </div>
                     <div class="cart-details">
-                        <img src="../assets/img/mc/mc2.jpg" alt="" class="cart-img">
+                        <img src="../assets/img/mc/mc.jpg" alt="" class="cart-img">
                         <h5>MC Njozi</h5>
                         <p>
                             TZS 340,000,00.00
@@ -159,8 +159,7 @@
                                     <input type="tel" name="text" id="tel" placeholder="Phone Number" required>
                                     <input type="text" name="subject" id="fname" placeholder="Subject" required>
                                 </div>
-                                <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="Message"
-                                    required></textarea>
+                                <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="Message" required></textarea>
                                 <input type="submit" value="Send Message">
                             </form>
                         </div>
@@ -173,8 +172,7 @@
                                     <h3>Address</h3>
                                     <p>
                                         Box 261 Kinondoni,
-                                        <br>
-                                        Dar es salaam, Tanzania
+                                        <br> Dar es salaam, Tanzania
                                     </p>
                                 </div>
                             </div>
@@ -184,8 +182,7 @@
                                     <h3>Email</h3>
                                     <p>
                                         info@celebrate.co.tz
-                                        <br>
-                                        celebrate@gmail.com
+                                        <br> celebrate@gmail.com
                                     </p>
                                 </div>
                             </div>
@@ -204,8 +201,7 @@
                                     <h3>Call</h3>
                                     <p>
                                         +255 686 389 908
-                                        <br>
-                                        +255 716 491 716
+                                        <br> +255 716 491 716
                                     </p>
                                 </div>
                             </div>
@@ -214,8 +210,7 @@
                 </div>
                 <div class="map">
                     <h2 class="display-4 text-center text-primary">OUR LOCATION</h2>
-                    <iframe title="IFM Map"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.6367935266585!2d39.29122961471989!3d-6.8139554950752075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c4b113fc2db53%3A0x1735d30e3398bba!2sInstitute%20of%20Finance%20Management%20(IFM)!5e0!3m2!1sen!2stz!4v1622844016338!5m2!1sen!2stz"
+                    <iframe title="IFM Map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.6367935266585!2d39.29122961471989!3d-6.8139554950752075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c4b113fc2db53%3A0x1735d30e3398bba!2sInstitute%20of%20Finance%20Management%20(IFM)!5e0!3m2!1sen!2stz!4v1622844016338!5m2!1sen!2stz"
                         allowfullscreen="" loading="lazy">
                     </iframe>
                 </div>
@@ -231,8 +226,7 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <img src="../assets/img/hero/hero13.svg" alt="" class="img-fluid">
-                    Let's party!
+                    <img src="../assets/img/hero/hero13.svg" alt="" class="img-fluid"> Let's party!
                 </div>
                 <div class="col">
                     <h3 class="text-secondary">
@@ -291,9 +285,7 @@
 
     <!-- ====== Scripts ====== -->
     <!-- JQuery CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <!-- jQuery Offline -->
     <script src="../assets/vendors/jquery/jquery.min.js"></script>
     <!-- Main JS -->
