--- a/celebrate/pages/mc_user_view.html
+++ b/celebrate/pages/mc_user_view.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="carts">
                     <div class="cart-details">
-                        <img src="../assets/img/mc/mc1.jpg" alt="" class="cart-img">
+                        <img src="../assets/img/mc/mc.jpg" alt="" class="cart-img">
                         <h5>MC Maeda</h5>
                         <p>
                             TZS 150,000,00.00
@@ -80,7 +80,7 @@
                         <i class="fas fa-trash-alt"></i>
                     </div>
                     <div class="cart-details">
-                        <img src="../assets/img/mc/mc2.jpg" alt="" class="cart-img">
+                        <img src="../assets/img/mc/mc.jpg" alt="" class="cart-img">
                         <h5>MC Njozi</h5>
                         <p>
                             TZS 340,000,00.00
@@ -88,7 +88,7 @@
                         <i class="fas fa-trash-alt"></i>
                     </div>
                     <div class="cart-details">
-                        <img src="../assets/img/mc/mc2.jpg" alt="" class="cart-img">
+                        <img src="../assets/img/mc/mc.jpg" alt="" class="cart-img">
                         <h5>MC Njozi</h5>
                         <p>
                             TZS 340,000,00.00
@@ -150,21 +150,14 @@
                         <div class="mc-img">
                             <img src="../assets/img/user/user1.jpg" alt="">
                         </div>
-                        <h3 class="pt-1">Mc Maeda</h3>
+                        <h3 class="pt-1">Mc Pilipili</h3>
                     </div>
                     <div class="mc-about">
                         <h2 class="text-left">About Me</h2>
                         <p>
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
+                            The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me. The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me. The one and
+                            only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me. The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with
+                            me. The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                         </p>
                         <div class="mc-social">
                             <a href="#" target="_blank" rel="noopener noreferrer">
@@ -183,20 +176,12 @@
                     <div class="card p-4">
                         <h3 class="pb-1">My Calendar</h3>
                         <p>
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
+                            The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me. The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me. The one and
+                            only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                         </p>
                         <p>
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
+                            The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me. The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me. The one and
+                            only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                         </p>
                     </div>
                 </div>
@@ -239,8 +224,7 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <img src="../assets/img/hero/hero13.svg" alt="" class="img-fluid">
-                    Let's party!
+                    <img src="../assets/img/hero/hero13.svg" alt="" class="img-fluid"> Let's party!
                 </div>
                 <div class="col">
                     <h3 class="text-secondary">
@@ -299,9 +283,7 @@
 
     <!-- ====== Scripts ====== -->
     <!-- JQuery CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <!-- jQuery Offline -->
     <script src="../assets/vendors/jquery/jquery.min.js"></script>
     <!-- Main JS -->
