--- a/celebrate/pages/mybookings.html
+++ b/celebrate/pages/mybookings.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="carts">
                     <div class="cart-details">
-                        <img src="../assets/img/mc/mc1.jpg" alt="" class="cart-img">
+                        <img src="../assets/img/mc/mc.jpg" alt="" class="cart-img">
                         <h5>MC Maeda</h5>
                         <p>
                             TZS 150,000,00.00
@@ -80,7 +80,7 @@
                         <i class="fas fa-trash-alt"></i>
                     </div>
                     <div class="cart-details">
-                        <img src="../assets/img/mc/mc2.jpg" alt="" class="cart-img">
+                        <img src="../assets/img/mc/mc.jpg" alt="" class="cart-img">
                         <h5>MC Njozi</h5>
                         <p>
                             TZS 340,000,00.00
@@ -88,7 +88,7 @@
                         <i class="fas fa-trash-alt"></i>
                     </div>
                     <div class="cart-details">
-                        <img src="../assets/img/mc/mc2.jpg" alt="" class="cart-img">
+                        <img src="../assets/img/mc/mc.jpg" alt="" class="cart-img">
                         <h5>MC Njozi</h5>
                         <p>
                             TZS 340,000,00.00
@@ -174,7 +174,7 @@
                                 <th id="total">Total</th>
                             </tr>
                             <tr>
-                                <td><img src="../assets/img/mc/mc1.jpg" alt="" class="mc-img"></td>
+                                <td><img src="../assets/img/mc/mc.jpg" alt="" class="mc-img"></td>
                                 <td>
                                     <h5>
                                         Mc Kwetu
@@ -197,7 +197,7 @@
                                 <td>TZS 3,500,000</td>
                             </tr>
                             <tr>
-                                <td><img src="../assets/img/mc/mc2.jpg" alt="" class="mc-img"></td>
+                                <td><img src="../assets/img/mc/mc.jpg" alt="" class="mc-img"></td>
                                 <td>
                                     <h5>
                                         Mc Maeda
@@ -220,7 +220,7 @@
                                 <td>TZS 1,500,000</td>
                             </tr>
                             <tr>
-                                <td><img src="../assets/img/mc/mc4.jpg" alt="" class="mc-img"></td>
+                                <td><img src="../assets/img/mc/mc.jpg" alt="" class="mc-img"></td>
                                 <td>
                                     <h5>
                                         Mc Njozi
@@ -289,8 +289,7 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <img src="../assets/img/hero/hero13.svg" alt="" class="img-fluid">
-                    Let's party!
+                    <img src="../assets/img/hero/hero13.svg" alt="" class="img-fluid"> Let's party!
                 </div>
                 <div class="col">
                     <h3 class="text-secondary">
@@ -349,9 +348,7 @@
 
     <!-- ====== Scripts ====== -->
     <!-- JQuery CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <!-- jQuery Offline -->
     <script src="../assets/vendors/jquery/jquery.min.js"></script>
     <!-- Main JS -->
