--- a/celebrate/pages/book_mc_casual.html
+++ b/celebrate/pages/book_mc_casual.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="carts">
                     <div class="cart-details">
-                        <img src="../assets/img/mc/mc1.jpg" alt="" class="cart-img">
+                        <img src="../assets/img/mc/mc.jpg" alt="" class="cart-img">
                         <h5>MC Maeda</h5>
                         <p>
                             TZS 150,000,00.00
@@ -80,7 +80,7 @@
                         <i class="fas fa-trash-alt"></i>
                     </div>
                     <div class="cart-details">
-                        <img src="../assets/img/mc/mc2.jpg" alt="" class="cart-img">
+                        <img src="../assets/img/mc/mc.jpg" alt="" class="cart-img">
                         <h5>MC Njozi</h5>
                         <p>
                             TZS 340,000,00.00
@@ -88,7 +88,7 @@
                         <i class="fas fa-trash-alt"></i>
                     </div>
                     <div class="cart-details">
-                        <img src="../assets/img/mc/mc2.jpg" alt="" class="cart-img">
+                        <img src="../assets/img/mc/mc.jpg" alt="" class="cart-img">
                         <h5>MC Njozi</h5>
                         <p>
                             TZS 340,000,00.00
@@ -150,14 +150,13 @@
                     <div class="card">
                         <div class="card-img">
                             <div class="inner">
-                                <img src="../assets/img/mc/mc1.jpg" alt="" class="card-img-top img-fluid" on>
+                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid" on>
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC Njozi</h3>
+                            <h3>MC Pilipili</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <a href="mc_user_view.html" class="btn-cart">Select</a>
@@ -167,14 +166,13 @@
                     <div class="card">
                         <div class="card-img">
                             <div class="inner">
-                                <img src="../assets/img/mc/mc2.jpg" alt="" class="card-img-top img-fluid">
+                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC Kwetu</h3>
+                            <h3>MC Pilipili</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <a href="mc_user_view.html" class="btn-cart">Select</a>
@@ -184,67 +182,13 @@
                     <div class="card">
                         <div class="card-img">
                             <div class="inner">
-                                <img src="../assets/img/mc/mc4.jpg" alt="" class="card-img-top img-fluid">
+                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC Maeda</h3>
+                            <h3>MC Pilipili</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row flex even-columns pt-0 pb-0">
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc4.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Njozi</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc1.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Kwetu</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc2.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Maeda</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <a href="mc_user_view.html" class="btn-cart">Select</a>
@@ -256,14 +200,13 @@
                     <div class="card">
                         <div class="card-img">
                             <div class="inner">
-                                <img src="../assets/img/mc/mc4.jpg" alt="" class="card-img-top img-fluid">
+                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC Njozi</h3>
+                            <h3>MC Pilipili</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <a href="mc_user_view.html" class="btn-cart">Select</a>
@@ -273,14 +216,13 @@
                     <div class="card">
                         <div class="card-img">
                             <div class="inner">
-                                <img src="../assets/img/mc/mc1.jpg" alt="" class="card-img-top img-fluid">
+                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC Kwetu</h3>
+                            <h3>MC Pilipili</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <a href="mc_user_view.html" class="btn-cart">Select</a>
@@ -290,14 +232,63 @@
                     <div class="card">
                         <div class="card-img">
                             <div class="inner">
-                                <img src="../assets/img/mc/mc2.jpg" alt="" class="card-img-top img-fluid">
+                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC Maeda</h3>
+                            <h3>MC Pilipili</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
+                            </p>
+                            <div class="add-cart-price">
+                                <a href="mc_user_view.html" class="btn-cart">Select</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row flex even-columns pt-0 pb-0">
+                    <div class="card">
+                        <div class="card-img">
+                            <div class="inner">
+                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h3>MC Pilipili</h3>
+                            <p>
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
+                            </p>
+                            <div class="add-cart-price">
+                                <a href="mc_user_view.html" class="btn-cart">Select</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <div class="inner">
+                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h3>MC Pilipili</h3>
+                            <p>
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
+                            </p>
+                            <div class="add-cart-price">
+                                <a href="mc_user_view.html" class="btn-cart">Select</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <div class="inner">
+                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h3>MC Pilipili</h3>
+                            <p>
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <a href="mc_user_view.html" class="btn-cart">Select</a>
@@ -316,8 +307,7 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <img src="../assets/img/hero/hero13.svg" alt="" class="img-fluid">
-                    Let's party!
+                    <img src="../assets/img/hero/hero13.svg" alt="" class="img-fluid"> Let's party!
                 </div>
                 <div class="col">
                     <h3 class="text-secondary">
@@ -376,9 +366,7 @@
 
     <!-- ====== Scripts ====== -->
     <!-- JQuery CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <!-- jQuery Offline -->
     <script src="../assets/vendors/jquery/jquery.min.js"></script>
     <!-- Main JS -->
